Terraform/simple_ec2.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "simpleinstance" {
  ami = "ami-0c55b159cbfafe1f0"
  instance_type = "t2.micro"

  tags = {
    Name= "simpleinstance"
  }
}
